--- a/제로초 인강/5-3.css
+++ b/제로초 인강/5-3.css
@@ -213,9 +213,8 @@ nav li:nth-child(6) span:first-child{
 }
 
 #search-ranking {
-    position: absolute;
-    top:16px;
-    right:100px;
+    float:right;
+    margin-top:16px;
 }
 
 #rank-number {
