--- a/제로초 인강/7-1.css
+++ b/제로초 인강/7-1.css
@@ -314,8 +314,8 @@ main{
 }
 
 #main-first-block{
-    display: inline-block;
-    width:100%;
+    float:right;
+    vertical-align: top;
 }
 
 #main-ad{
@@ -375,6 +375,7 @@ main{
 }
 
 #main-newsstand ul{
+    display: inline-block;
     margin:0;
     padding:0;
     list-style:none;
