리뷰 디테일 페이지 생성, 기능 2, 4 구현

--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_list.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_list.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     {% for review in reviews %}
-    <p>{{ review.title }}</p>
+
+    <p><a href="/reviews/{{ review.pk }}">{{ review.title }}</a></p>
     <small>{{ review.releaseYear }}</small>
     <small>{{ review.genre }}</small>
     <small>{{ review.starRating }}</small>
