form 수정, 기능10 구현

--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_detail.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_detail.html
@@ -1,4 +1,6 @@
 <h1>{{ review.title }}</h1>
+<small>개봉년도 | {{ review.releaseYear }}</small>
+<br />
 <small>감독 | {{ review.director }}</small>
 <br />
 <small>주연 | {{ review.mainActor }}</small>
