--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_create.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_create.html
@@ -1,8 +1,12 @@
 <h1>리뷰 작성</h1>
 
-<form action="">
+<form action="/reviews/create", method="post">
+    {% csrf_token %}
     <div>
         제목: <input type="text" name="title">
+    </div>
+    <div>
+        개봉년도: <input type="number" name="releaseYear">
     </div>
     <div>
         감독: <input type="text" name="director">
@@ -14,12 +18,15 @@
         장르: <input type="text" name="genre">
     </div>
     <div>
-        별점: <input type="number" name="starRating">
+        별점: <input type="number" step="0.1" name="starRating">
     </div>
     <div>
         시간: <input type="number" name="runningTime">
     </div>
     <div>
         리뷰: <textarea name="reviewContent"></textarea>
+    </div>
+    <div>
+        <input type="submit" value="저장">
     </div>
 </form>
