--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_detail.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_detail.html
@@ -13,3 +13,7 @@
 <br />
 <br />
 <small>리뷰 | {{ review.reviewContent }}</small>
+<form action="/reviews/{{ review.id }}/delete" method="post">
+    {% csrf_token %}
+    <input type="submit" value="삭제">
+</form>
