오류 수정 완료! 기능6, 기능9, 기능11 구현

--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_detail.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_detail.html
@@ -13,6 +13,12 @@
 <br />
 <br />
 <small>리뷰 | {{ review.reviewContent }}</small>
+
+<form action="/reviews/{{ review.id }}/update" method = "post ">
+    {% csrf_token %}
+    <input type="submit" value="수정">
+</form>
+
 <form action="/reviews/{{ review.id }}/delete" method="post">
     {% csrf_token %}
     <input type="submit" value="삭제">
