--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_list.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_list.html
@@ -7,9 +7,12 @@
     <title>myMovieReviews</title>
 </head>
 <body>
-    <div>
-        <h1><a href="/reviews/create">리뷰 작성</a></h1>
-    </div>
+    <header>
+        <div>
+            <h1><a href="/reviews/create">리뷰 작성</a></h1>
+        </div>
+    </header>
+    
     {% for review in reviews %}
     <p><a href="/reviews/{{ review.pk }}">{{ review.title }}</a></p>
     <small>{{ review.releaseYear }}</small>
