--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_detail.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_detail.html
@@ -1,3 +1,7 @@
+<header>
+    <a href="/">myMovieReviews</a>
+</header>
+
 <h1>{{ review.title }}</h1>
 <small>개봉년도 | {{ review.releaseYear }}</small>
 <br />
