--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_create.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_create.html
@@ -15,8 +15,14 @@
         주연: <input name="mainActor" />
     </div>
     <div>
-        장르: <input name="genre" />
-    </div>
+        장르:
+        <!-- 백엔드 챌린지 장르 선택-->
+        <select name="genre">
+            {% for t1, t2 in review.GENRES %}
+            <option>{{ t2 }}</option>
+            {% endfor %}
+        </select>
+    </div> 
     <div>
         별점: <input type="number" step="0.5" name="starRating" />
     </div>
