--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_list.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_list.html
@@ -18,7 +18,7 @@
                 <option value="가나다순">가나다순</option>
                 <option value="별점높은순">별점높은순</option>
                 <option value="상영시간순">상영시간순</option>
-                <option value="최신순" selected>최신순</option>
+                <option value="최신개봉순" selected>최신개봉순</option>
             </select>
             <input type="submit" value="정렬">
         </div>
