challenge 러닝타임 단위 변환

--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_detail.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_detail.html
@@ -13,7 +13,8 @@
 <br />
 <small>별점 | {{ review.starRating }}</small>
 <br />
-<small>시간 | {{ review.runningTime }}분</small>
+<!-- 백엔드 챌린지 러닝타임 단위 변환 -->
+<small>시간 | {{ hour }}시간 {{ minute }}분</small>
 <br />
 <br />
 <small>리뷰 | {{ review.reviewContent }}</small>
