--- a/myMovieReviews/server/apps/reviews/templates/reviews/reviews_update.html
+++ b/myMovieReviews/server/apps/reviews/templates/reviews/reviews_update.html
@@ -1,38 +1,68 @@
-<h1>리뷰 수정</h1>
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../static/css/reviews_update.css" />
+    <title>myMovieReviews</title>
+</head>
+<body>
+    <header class="header">
+        <div>
+            <a href="/" class="header-logo">
+                📖 my<span>Movie</span>Reviews
+            </a>
+        </div>
+        <div>
+            <a href="/reviews/create" class="header-create">Add a New review</a>
+        </div>
+    </header>
 
-<form action="/reviews/{{ review.id }}/update", method="post">
-    {% csrf_token %}
-    <div>
-        제목: <input name="title" value="{{ review.title }}" />
+    <hr />
+    <div class="create">
+        <div class="main-create">
+            <div class="main-create-title">
+                <span>Movie</span>Review🍿
+            </div>
+            <form action="/reviews/{{ review.id }}/update", method="post">
+                {% csrf_token %}
+                <div>
+                    제목: <input name="title" value="{{ review.title }}" />
+                </div>
+                <div>
+                    개봉년도: <input type="number" name="releaseYear" value="{{ review.releaseYear }}" />
+                </div>
+                <div>
+                    감독: <input name="director" value="{{ review.director }}" />
+                </div>
+                <div>
+                    주연: <input name="mainActor" value="{{ review.mainActor }}" />
+                </div>
+                <div>
+                    장르: 
+                    <!-- 백엔드 챌린지 장르 선택-->
+                    <select name="genre">
+                        {% for t1,t2 in review.GENRES %}
+                        <option>{{ t2 }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div>
+                    별점: <input type="number" step="0.5" name="starRating" value="{{ review.starRating }}" />
+                </div>
+                <div>
+                    시간: <input type="number" name="runningTime" value="{{ review.runningTime }}" />
+                </div>
+                <div>
+                    리뷰: <textarea name="reviewContent">{{ review.reviewContent }}</textarea>
+                </div>
+                <div>
+                    <input type="submit" value="저장" />
+                </div>
+            </form>
+        </div>
     </div>
-    <div>
-        개봉년도: <input type="number" name="releaseYear" value="{{ review.releaseYear }}" />
-    </div>
-    <div>
-        감독: <input name="director" value="{{ review.director }}" />
-    </div>
-    <div>
-        주연: <input name="mainActor" value="{{ review.mainActor }}" />
-    </div>
-    <div>
-        장르: 
-        <!-- 백엔드 챌린지 장르 선택-->
-        <select name="genre">
-            {% for t1,t2 in review.GENRES %}
-            <option>{{ t2 }}</option>
-            {% endfor %}
-        </select>
-    </div>
-    <div>
-        별점: <input type="number" step="0.5" name="starRating" value="{{ review.starRating }}" />
-    </div>
-    <div>
-        시간: <input type="number" name="runningTime" value="{{ review.runningTime }}" />
-    </div>
-    <div>
-        리뷰: <textarea name="reviewContent">{{ review.reviewContent }}</textarea>
-    </div>
-    <div>
-        <input type="submit" value="저장" />
-    </div>
-</form>
+</body>
+</html>
